Marcs Teil hinzugefügt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
         <service
             android:name=".IntentService"
             android:exported="false" />
+        <activity android:name=".Repeating_activity"/>
+        <receiver android:name=".MyNotificationPublisher" />
 
     </application>
 
