--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
         android:required="false" />
 
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_tran"
@@ -27,10 +26,10 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name_short">
+            android:label="@string/app_name_short"
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -41,10 +40,11 @@
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
+
         <service
             android:name=".IntentService"
             android:exported="false" />
-        <activity android:name=".Repeating_activity"/>
+        <activity android:name=".Repeating_activity" />
         <receiver android:name=".MyNotificationPublisher" />
 
     </application>
