--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
     }
 }
 ext {
-    supportLibVersion = "28.0.0-alpha3"
+    supportLibVersion = "27.1.1"
 }
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
