--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         android:label="@string/app_name_short"
         android:roundIcon="@mipmap/ic_launcher_tran"
         android:supportsRtl="true"
+        android:configChanges="orientation"
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme">
         <activity
