--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     defaultConfig {
         applicationId "com.example.nathalieseibert.wells"
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -20,7 +20,7 @@ android {
     }
 }
 ext {
-    supportLibVersion = "28.0.0-alpha3"
+    supportLibVersion = "27.1.1"
 }
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
