--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.nathalieseibert.wells">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -24,14 +25,15 @@
 
     <application
         android:allowBackup="true"
+        android:configChanges="orientation"
         android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher_tran"
         android:label="@string/app_name_short"
         android:roundIcon="@mipmap/ic_launcher_tran"
-        android:supportsRtl="true"
-        android:configChanges="orientation"
         android:screenOrientation="portrait"
-        android:theme="@style/AppTheme">
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name_short"
