--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,10 +42,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity" />
+
         <activity
             android:name=".MainMenueActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
 
         <service
             android:name=".IntentService"
